# KGLab-SS2023-Colocation

./: .gitignore  .project  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
Matching/: conf_shortname_matching.ipynb  match_result_example6.20.csv
Matching/Dataset/: conf_shortname.csv
VolumsANDProceedings_ceur-ws/: ceur_cleaned_alltitle.csv  proceedings.csv  proceedings.json  volums.csv
Wikidata/: QuerySentenceInWiki.txt
Wikidata/Dataset/: ColocatedSampleInWiki.csv  ConferenceWiki.csv  workshop_wiki.csv
colocation/: __main__.py  cache_manager.py  extractor.py  main.py  matcher.py  neo4j_manager.py  result_processor.py  values.py  wikidata_integrator.py  wikidata_loader.py
colocation/dataloaders/: README.md  dblp_loader.py  dblp_loader_depricated.py  wikidata_loader.py
dblp/: ParseDBLP_Proceeedings.ipynb  dblp_proceedings0_34XX.csv
joint_dataset(leftjoin)/: ceur_wiki_dblp.csv  join_ceur_wiki_dblp.ipynb
scripts/: install  test
testdata/: data.json  precision-recall.csv  precision-recall.pgf
tests/: test_cache_manager.py  test_dblp_downloading.py  test_dblp_downloading_depricated.py  test_extractor.py  test_matcher.py  test_neo4j.py  test_result_processor.py  test_wikidata_downloading.py  test_wikidata_integrator.py
